jellyseerr/values/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: jellyseerr
          image: ghcr.io/seerr-team/seerr:latest
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources:
            requests:
              cpu: "0.05"
              memory: "100Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config-pvc
