jellyseerr/values/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
  type: ClusterIP
